--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
             background: radial-gradient(circle at center, transparent 0%, rgba(0,0,0,0.3) 100%);
         }
 
+		#ui-layer {
+    position: absolute;
+    top: 10%;
+    left: 20px;
+    z-index: 1000;
+    font-family: 'Cinzel', serif;
+    color: #FFD700;
+    font-size: 16px;
+    line-height: 1.6;
+    pointer-events: none; /* Prevent interaction */
+}
+
         /* Loading 动画 */
         #loader {
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
@@ -201,9 +213,15 @@
 
     <div id="ui-layer">
         <div id="top-right-controls">
-            <button id="btn-fullscreen" class="control-btn">全屏显示</button>
+            <button id="btn-fullscreen" class="control-btn">Full Screen Mode</button>
         </div>
     </div>
+	
+	<div id="ui-layer2">
+    <div class="instruction">✊ <b>Fist</b> to Summon Tree</div>
+    <div class="instruction">✋ <b>Open Hand</b> to Disperse</div>
+    <div class="instruction">🫰 <b>Pinch</b> to Catch Memory</div>
+</div>
 
     <div id="webcam-wrapper">
         <video id="webcam" autoplay playsinline webkit-playsinline></video>
