--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             background: radial-gradient(circle at center, transparent 0%, rgba(0,0,0,0.3) 100%);
         }
 
-		#ui-layer {
+		#ui-layer2 {
     position: absolute;
     top: 10%;
     left: 20px;
