--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
 		#ui-layer2 {
     position: absolute;
-    top: 10%;
-    left: 20px;
+    bottom: 20px; /* Move to the bottom */
+    left: 20px; /* Keep it at the left side */
     z-index: 1000;
     font-family: 'Cinzel', serif;
     color: #FFD700;
@@ -80,7 +80,6 @@
     line-height: 1.6;
     pointer-events: none; /* Prevent interaction */
 }
-
         /* Loading 动画 */
         #loader {
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
@@ -218,9 +217,10 @@
     </div>
 	
 	<div id="ui-layer2">
-    <div class="instruction">✊ <b>Fist</b> to Summon Tree</div>
-    <div class="instruction">✋ <b>Open Hand</b> to Disperse</div>
-    <div class="instruction">🫰 <b>Pinch</b> to Catch Memory</div>
+    <div class="instruction">✊<b>Fist</b> to Summon Tree</div>
+    <div class="instruction">✋<b>Open Hand</b> to Disperse</div>
+	<div class="instruction">Move ✋<b>Move Palm</b> Control Rotation</div>
+    <div class="instruction">🤏<b>Pinch</b> to Catch Memory Photo</div>
 </div>
 
     <div id="webcam-wrapper">
