--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
     </div>
 	
 	<div id="ui-layer2">
-    <div class="instruction">✊<b>Fist</b> to Summon Tree</div>
-    <div class="instruction">✋<b>Open Hand</b> to Disperse</div>
-	<div class="instruction">Move ✋<b>Move Palm</b> Control Rotation</div>
-    <div class="instruction">🤏<b>Pinch</b> to Catch Memory Photo</div>
+    <div class="instruction">✊→<b>Fist</b> to SUMMON Tree</div>
+    <div class="instruction">✋→<b>Open Hand</b> to SCATTER</div>
+	<div class="instruction">Move✋→<b>Move Palm</b> to Control ROTATION</div>
+    <div class="instruction">🤏→<b>Pinch</b> to CATCH Memory Photo</div>
 </div>
 
     <div id="webcam-wrapper">
