--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
         <canvas id="webcam-preview"></canvas>
     </div>
     
-    <audio id="bg-music" loop crossorigin="anonymous">
-        <source src="https://actions.google.com/sounds/v1/holiday/we_wish_you_a_merry_christmas_instrumental.ogg" type="audio/ogg">
-    </audio>
+    <audio id="bg-music" autoplay loop muted>
+    <source src="./assets/music/How_XMAS_music.ogg" type="audio/ogg">
+</audio>
 
     <div class="download-btn-container" id="downloadContainer">
         <button class="download-btn" onclick="downloadHTML()">
