--- a/index.html
+++ b/index.html
@@ -587,20 +587,28 @@ async function loadStoryPhotos() {
                     target = this.posScatter;
                 } 
                 else if (mode === 'FOCUS') {
-                    // 聚焦模式：被选中的物体飞到镜头前，其他的退后
-                    if (this.mesh === focusTargetMesh) {
-                        // 将世界坐标下的镜头前位置转换到 Group 局部坐标
-                        const invMatrix = new THREE.Matrix4().copy(mainGroup.matrixWorld).invert();
-                        const camPos = new THREE.Vector3(0, 0, CONFIG.camera.z - 15);
-                        target = camPos.applyMatrix4(invMatrix);
-                        lerpSpeed = 6.0; // 聚焦时飞得快一点
-                        this.mesh.lookAt(camera.position);
-						s = this.baseScale * 5.0;
-                    } else {
-                        target = this.posScatter;
-                        s = 0.01; // 其他粒子缩小
-                    }
-                } 
+    // 聚焦模式：被选中的物体飞到镜头前，其他的退后
+    if (this.mesh === focusTargetMesh) {
+        // 将世界坐标下的镜头前位置转换到 Group 局部坐标
+        const invMatrix = new THREE.Matrix4().copy(mainGroup.matrixWorld).invert();
+        const camPos = new THREE.Vector3(0, 0, CONFIG.camera.z - 15);
+        target = camPos.applyMatrix4(invMatrix);
+        lerpSpeed = 6.0; // 聚焦时飞得快一点
+        this.mesh.lookAt(camera.position);
+
+        // 计算摄像头到物体的距离
+        const distance = camera.position.distanceTo(this.mesh.position);
+
+        // 根据距离调整物体的缩放
+        s = this.baseScale * (1 / distance);  // 距离越近，缩放越大，越远，缩放越小
+        s = Math.min(s, 5.0);  // 设置最大缩放值为 5.0，避免无限放大
+        s = Math.max(s, 0.01); // 设置最小缩放值，避免物体消失
+    } else {
+        target = this.posScatter;
+        s = 0.01; // 其他粒子缩小
+    }
+}
+
                 else if (mode === 'METEOR') {
                     // 流星雨模式逻辑 (保留接口，目前手势未触发)
                     target = this.posScatter; 
