--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
             height: 100%; 
             transform: scaleX(-1); /* 镜像翻转 */
         }
+		
         
         /* 下载按钮 (特殊功能) */
         .download-btn-container {
@@ -231,11 +232,25 @@
     <audio id="bg-music" autoplay loop >
     <source src="./assets/music/How_XMAS_music.ogg" type="audio/ogg">
 </audio>
-
-	<!-- 可选：播放按钮兜底（如果自动触发失败，用户可手动点） -->
-<button id="music-play-btn" style="position: fixed; top: 20px; right: 20px; z-index: 9999; padding: 8px 16px; display: none;">
+<!-- 播放按钮：默认显示，CSS 美化，确保能看到 -->
+<button id="music-play-btn" style="
+  position: fixed; 
+  top: 20px; 
+  right: 20px; 
+  z-index: 9999; /* 置顶，避免被其他元素遮挡 */
+  padding: 12px 24px; 
+  background: #ff6b6b; 
+  color: white; 
+  border: none; 
+  border-radius: 8px; 
+  font-size: 14px; 
+  cursor: pointer; 
+  box-shadow: 0 2px 8px rgba(0,0,0,0.2); 
+  display: block; /* 强制默认显示，关键！ */
+">
   播放背景音乐
 </button>
+	
 
     <div class="download-btn-container" id="downloadContainer">
         <button class="download-btn" onclick="downloadHTML()">
@@ -587,28 +602,20 @@ async function loadStoryPhotos() {
                     target = this.posScatter;
                 } 
                 else if (mode === 'FOCUS') {
-    // 聚焦模式：被选中的物体飞到镜头前，其他的退后
-    if (this.mesh === focusTargetMesh) {
-        // 将世界坐标下的镜头前位置转换到 Group 局部坐标
-        const invMatrix = new THREE.Matrix4().copy(mainGroup.matrixWorld).invert();
-        const camPos = new THREE.Vector3(0, 0, CONFIG.camera.z - 15);
-        target = camPos.applyMatrix4(invMatrix);
-        lerpSpeed = 6.0; // 聚焦时飞得快一点
-        this.mesh.lookAt(camera.position);
-
-        // 计算摄像头到物体的距离
-        const distance = camera.position.distanceTo(this.mesh.position);
-
-        // 根据距离调整物体的缩放
-        s = this.baseScale * (1 / distance);  // 距离越近，缩放越大，越远，缩放越小
-        s = Math.min(s, 5.0);  // 设置最大缩放值为 5.0，避免无限放大
-        s = Math.max(s, 0.01); // 设置最小缩放值，避免物体消失
-    } else {
-        target = this.posScatter;
-        s = 0.01; // 其他粒子缩小
-    }
-}
-
+                    // 聚焦模式：被选中的物体飞到镜头前，其他的退后
+                    if (this.mesh === focusTargetMesh) {
+                        // 将世界坐标下的镜头前位置转换到 Group 局部坐标
+                        const invMatrix = new THREE.Matrix4().copy(mainGroup.matrixWorld).invert();
+                        const camPos = new THREE.Vector3(0, 0, CONFIG.camera.z - 15);
+                        target = camPos.applyMatrix4(invMatrix);
+                        lerpSpeed = 6.0; // 聚焦时飞得快一点
+                        this.mesh.lookAt(camera.position);
+						s = this.baseScale * 5.0;
+                    } else {
+                        target = this.posScatter;
+                        s = 0.01; // 其他粒子缩小
+                    }
+                } 
                 else if (mode === 'METEOR') {
                     // 流星雨模式逻辑 (保留接口，目前手势未触发)
                     target = this.posScatter; 
